--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,10 @@ p {
     @apply relative mb-3
 }
 
+a {
+    @apply text-blue-500 underline
+}
+
 .chord {
     @apply absolute top-[-18px] font-semibold text-sm
 }
