--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,10 @@ p {
     @apply relative mb-4
 }
 
+pre {
+    @apply font-sans
+}
+
 .chord {
     @apply absolute top-[-14px] font-bold text-sm font-sans
 }
