Add Search Lyrics From lyrics.ovh

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,10 @@ p {
     @apply relative mb-4
 }
 
+div::-webkit-scrollbar {
+    display: none;
+}
+
 pre {
     @apply whitespace-pre-wrap font-sans
 }
