--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,22 @@ p {
     @apply relative mb-4
 }
 
+.rta {
+    @apply relative
+}
+
+.rta__entity--selected {
+    @apply bg-blue-500 text-white
+}
+
+.rta__autocomplete {
+    @apply absolute
+}
+
+[aria-selected="true"] {
+    @apply bg-gray-400
+}
+
 div::-webkit-scrollbar {
     display: none;
 }
