--- a/app/globals.css
+++ b/app/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 p {
-    @apply relative mb-4
+    @apply relative mb-5
 }
 
 .rta {
@@ -31,7 +31,7 @@ pre {
 }
 
 .chord {
-    @apply absolute top-[-14px] font-bold text-sm font-sans
+    @apply absolute top-[-16px] font-bold text-sm font-sans text-neutral-900
 }
 
 input, select, textarea {
